# retrobus-perfetto

./: .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  LICENSE  README.md  cpp-header-only-design.md  example.py  mypy.ini  perfetto-trace-generation-guide.md  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS  setup-branch-protection.sh
.github/workflows/: cpp-ci.yml  publish.yml  python-ci.yml  rust-ci.yml  rust-clippy.yml  tests.yml
cpp/: CMakeLists.txt  README.md
cpp/cmake/: retrobus_perfetto-config.cmake.in
cpp/examples/: CMakeLists.txt  basic_example.cpp  cpu_emulator_example.cpp
cpp/include/retrobus/: retrobus_perfetto.hpp
cpp/tests/: CMakeLists.txt  test_builder.cpp  test_main.cpp
proto/: README.md  perfetto.proto
py/: .pylintrc  README.md  example.py  mypy.ini  pyproject.toml  setup.py
py/py/retrobus_perfetto/proto/: perfetto_pb2.py
py/retrobus_perfetto/: __init__.py  _build.py  annotations.py  builder.py  function_trace_summary.py  interning.py  perfetto_pb2.pyi  reader.py
py/tests/: test_builder.py  test_builder_snapshot.py  test_function_trace_summary.py
retrobus_perfetto/: __init__.py  annotations.py  builder.py
retrobus_perfetto/proto/: __init__.py  perfetto_pb2.pyi
rust/retrobus-perfetto/: Cargo.toml  README.md
rust/retrobus-perfetto/src/: annotations.rs  builder.rs  lib.rs  reentrant.rs
tests/: __init__.py  test_builder.py
tools/: README.md  perfetto_function_trace_summary.py  perfetto_pc_analyzer.py  perfetto_trace_compare.py  perfetto_trace_parser.py
ts/: README.md  package-lock.json  package.json
ts/scripts/: patch-proto.js
ts/src/: index.d.ts
ts/src/proto/: perfetto_pb.d.ts  perfetto_pb.js
